diesel_compile_tests/tests/fail/ordering_functions_require_ord.stderr
error[E0277]: the trait bound `diesel::sql_types::Bool: SqlOrd` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:13:38
   |
13 |     let source = stuff::table.select(max(stuff::b));
   |                                      ^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
  ::: $DIESEL/src/expression/functions/aggregate_ordering.rs
   |
   |     fn max<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                --------------- required by this bound in `diesel::dsl::max`
   |
   = note: required because of the requirements on the impl of `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate` for `diesel::sql_types::Bool`

error[E0277]: the trait bound `diesel::sql_types::Bool: SqlOrd` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:13:38
   |
13 |     let source = stuff::table.select(max(stuff::b));
   |                                      ^^^^^^^^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = note: required because of the requirements on the impl of `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate` for `diesel::sql_types::Bool`
   = note: required because of the requirements on the impl of `diesel::Expression` for `diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Bool, columns::b>`
   = note: required because of the requirements on the impl of `SelectDsl<diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Bool, columns::b>>` for `stuff::table`

error[E0277]: the trait bound `diesel::sql_types::Bool: SqlOrd` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:14:38
   |
14 |     let source = stuff::table.select(min(stuff::b));
   |                                      ^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
  ::: $DIESEL/src/expression/functions/aggregate_ordering.rs
   |
   |     fn min<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                --------------- required by this bound in `diesel::dsl::min`
   |
   = note: required because of the requirements on the impl of `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate` for `diesel::sql_types::Bool`

error[E0277]: the trait bound `diesel::sql_types::Bool: SqlOrd` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:14:38
   |
14 |     let source = stuff::table.select(min(stuff::b));
   |                                      ^^^^^^^^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = note: required because of the requirements on the impl of `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate` for `diesel::sql_types::Bool`
   = note: required because of the requirements on the impl of `diesel::Expression` for `diesel::expression::functions::aggregate_ordering::min::min<diesel::sql_types::Bool, columns::b>`
   = note: required because of the requirements on the impl of `SelectDsl<diesel::expression::functions::aggregate_ordering::min::min<diesel::sql_types::Bool, columns::b>>` for `stuff::table`
